<resources>
    <string name="app_name">NIKKAL </string>
    <string name="app_name1">Radio Online</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accion_agregar_favoritos">Agregar a Favoritos</string>
    <string name="tv_genero">Géneros</string>
    <string name="tv_sugerencia">Sugerencias</string>
    <string name="tv_mas_escuchado">Lo Más Escuchado</string>
    <string name="tv_favorito">Favoritos</string>
    <string name="btnbar_inicio">Inicio</string>
    <string name="btnbar_buscar">Buscar</string>
    <string name="btnbar_favorito">Favoritos</string>
    <string name="btnbar_radio">Radio</string>
    <string name="btnbar_ajuste">Ajuste</string>
    <string name="tv_busqueda_reciente">Busquedas recientes</string>
    <string name="hint_buscar">Buscar…</string>
    <string name="tv_canciones_favoritas">Mis Canciones</string>
    <string name="tv_artistas_favoritos">Mis Artistas</string>
    <string name="tv_almbum_favoritos">Mis Álbumes</string>
    <string name="tv_mis_playlist">Mis Listas</string>
    <string name="tv_titulo_favoritos">Favoritos</string>
    <string name="tv_titulo_escuchadas_recientemente">Escuchadas Recientemente</string>
    <string name="tv_subtitulo_escuchadas_recientemente">Subtitulo Escuchadas Recientemente</string>
    <string name="facebook_app_id">207438126849071</string>
    <string name="fb_login_protocol_scheme">fb207438126849071</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="cabeceraLogin">Necesitas logearte para poder acceder a más funcionalidades</string>
    <string name="hint_nombre_lista_reproduccion">Nombre Lista de Reproducción</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="campo_obligatorio">Complete el campo obligatorio</string>
    <string name="debe_crear_lista_rep">Debe crear abrir o crear una lista de reprodución</string>
    <string name="pista_gregada">Pista Agregada</string>
    <string name="busqueda_vacia">Sin nada que buscar, nada encontramos :)</string>
    <string name="compartir_redes_sociales">Compartir Redes Sociales</string>
    <string name="mensaje_compartir">Esta canción es para ti!</string>
    <string name="album_favorito">Mis Albunes</string>
    <string name="album_Artista">Artista Album</string>
    <string name="artistas">Mis Artistas</string>
    <string name="pistas">Mis Canciones</string>
    <string name="mensajeLoginFavorito">Acceso Restringido, Necesitas acceder a través de facebook para poder visualizarlo</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="elemento_eliminado">Se ha removido de Favoritos</string>
    <string name="pista_anterior">Anterior</string>
    <string name="pista_siguiente">Próximo</string>
    <string name="sin_conexion_reproducir">No se puede reproducir sin conexión</string>
    <string name="modo_sin_coneccion">Modo sin conexión, solo puedes visualizar tus favoritos</string>


</resources>
