<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_centerVertical="true"
        android:id="@+id/tilNombreListaRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/hint_nombre_lista_reproduccion">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombreNuevaListaRep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@android:color/white" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btnAceptarNuevaListaRep"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnCancelarNuevaListaRep"
        android:layout_marginStart="37dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_aceptar"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btnCancelarNuevaListaRep"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="37dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_cancelar"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />


</RelativeLayout>